# CLI_Dataset_tool

./: README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml
dataset_tool/: .gitignore  README.md  __main__.py
dataset_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dataset_tool/core/: duplicates.py  hasher.py  logger.py  manifest.py  organizer.py  scanner.py
dataset_tool/models/: image_file.py  media_file.py  scan_result.py  text_file.py
tests/: test_scanner.py  tests_organizer.py
