[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-tool"
version = "0.1.0"
description = "Dataset organizer and analyzer for images and text"
authors = [
  { name="Margarita" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.scripts]
dataset-tool = "dataset_tool.__main__:main"

